--- a/package.json
+++ b/package.json
@@ -6,9 +6,31 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "history": "^4.10.1",
+    "jade": "^1.11.0",
+    "mongoose": "^5.12.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "react": "^17.0.2",
+    "react-contenteditable": "^3.3.5",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.1.0",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "session-file-store": "^1.5.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
