--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "session-file-store": "^1.5.0",
+    "timeago-react": "^3.0.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "devstart": "concurrently \"node ./server/server.js\" \"react-scripts start\"",
+    "devstart": "concurrently \"node server.js\" \"react-scripts start\"",
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
