--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "session-file-store": "^1.5.0",
     "timeago-react": "^3.0.2",
